--- a/Databasic.vbproj
+++ b/Databasic.vbproj
@@ -63,22 +63,25 @@
   <ItemGroup>
     <Compile Include="ActiveRecord\Entity.vb" />
     <Compile Include="ActiveRecord\Resources\Columns.vb" />
-    <Compile Include="Enums.vb" />
+    <Compile Include="Attributes\Format.vb" />
+    <Compile Include="Attributes\Trim.vb" />
+    <Compile Include="Misc\Enums.vb" />
+    <Compile Include="MetaDescriptor.vb" />
+    <Compile Include="Misc\ReaderWriterLockSlimExtensions.vb" />
     <Compile Include="Provider\Resource\Manipulations.vb" />
     <Compile Include="ActiveRecord\Resources\Table.vb" />
     <Compile Include="Attributes\Column.vb" />
     <Compile Include="Attributes\Connection.vb" />
     <Compile Include="Attributes\PrimaryKey.vb" />
-    <Compile Include="Attributes\Resource.vb" />
     <Compile Include="Attributes\Table.vb" />
     <Compile Include="Attributes\UniqueKey.vb" />
     <Compile Include="Connection\BeginTransaction.vb" />
     <Compile Include="Connection\Opening.vb" />
-    <Compile Include="Events.vb" />
+    <Compile Include="Misc\Events.vb" />
     <Compile Include="Connection\Closing.vb" />
     <Compile Include="Provider\Resource\Getters.vb" />
     <Compile Include="Connection.vb" />
-    <Compile Include="Structs.vb" />
+    <Compile Include="Misc\Structs.vb" />
     <Compile Include="Transaction.vb" />
     <Compile Include="Connection\StaticInit.vb" />
     <Compile Include="Database.vb" />
@@ -97,7 +100,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Statement\Reader.vb" />
+    <Compile Include="ActiveRecord\Entity\Reader.vb" />
     <Compile Include="ActiveRecord\Resource.vb" />
     <Compile Include="Statement.vb" />
   </ItemGroup>
