--- a/Databasic.vbproj
+++ b/Databasic.vbproj
@@ -61,13 +61,13 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActiveRecord\Entity.vb" />
+    <Compile Include="ActiveRecord\Entity\GetterSetter.vb" />
     <Compile Include="ActiveRecord\Resources\Columns.vb" />
     <Compile Include="Attributes\Format.vb" />
     <Compile Include="Attributes\Trim.vb" />
     <Compile Include="Misc\Enums.vb" />
     <Compile Include="MetaDescriptor.vb" />
-    <Compile Include="Misc\ReaderWriterLockSlimExtensions.vb" />
+    <Compile Include="Misc\Tools.vb" />
     <Compile Include="Provider\Resource\Manipulations.vb" />
     <Compile Include="ActiveRecord\Resources\Table.vb" />
     <Compile Include="Attributes\Column.vb" />
@@ -101,7 +101,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="ActiveRecord\Entity\Reader.vb" />
-    <Compile Include="ActiveRecord\Resource.vb" />
+    <Compile Include="ActiveRecord\Resources\InstanceGetter.vb" />
     <Compile Include="Statement.vb" />
   </ItemGroup>
   <ItemGroup>
