--- a/Databasic.nuspec
+++ b/Databasic.nuspec
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
 	<metadata minClientVersion="2.6">
 		<id>Databasic.Core</id>
-		<version>1.2.4.0</version>
+		<version>1.2.5.0</version>
 		<title>Databasic - Core</title>
 		<authors>Tom Flidr</authors>
 		<owners>Tom Flidr</owners>
@@ -17,12 +17,13 @@
 		</description>
 		<copyright>Copyright © 2017</copyright>
 		<tags>microsoft sql mssql tsql mysql mariadb postgresql postgres oracle orcl sqlite odbc ole oledb database query command select insert update delete pure sql dml tool utility library</tags>
-		<dependencies>
-			<!--dependency id="System" version="4.0.0.0" />
-		    <dependency id="System.Core" version="4.0.0.0" />
-		    <dependency id="System.Data" version="4.0.0.0" />
-		    <dependency id="System.Configuration" version="4.0.0.0" /-->
-		</dependencies>
+		<frameworkAssemblies>
+			<frameworkAssembly assemblyName="System.Core" />
+			<frameworkAssembly assemblyName="System.Data" />
+			<frameworkAssembly assemblyName="System.Configuration" />
+			<frameworkAssembly assemblyName="System.Runtime.Serialization" />
+			<frameworkAssembly assemblyName="System.Web" />
+		</frameworkAssemblies>
 		<releaseNotes>https://github.com/Databasic-NET/Databasic/releases</releaseNotes>
 	</metadata>
 </package>
