--- a/Databasic.vbproj
+++ b/Databasic.vbproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
@@ -77,7 +78,12 @@
     <Compile Include="ActiveRecord\Entity\DatabaseGetters\GetList.vb" />
     <Compile Include="ActiveRecord\Entity\DatabaseGetters\Init.vb" />
     <Compile Include="ActiveRecord\Entity\DatabaseReader\Privates.vb" />
+    <Compile Include="ActiveRecord\Entity\DatabaseReader\ToDictionaryTyped.vb" />
     <Compile Include="ActiveRecord\Entity\DatabaseReader\ToDictionary.vb" />
+    <Compile Include="ActiveRecord\Entity\DatabaseReader\ToInstanceTyped.vb" />
+    <Compile Include="ActiveRecord\Entity\DatabaseReader\ToJsonTyped.vb" />
+    <Compile Include="ActiveRecord\Entity\DatabaseReader\ToJson.vb" />
+    <Compile Include="ActiveRecord\Entity\DatabaseReader\ToListTyped.vb" />
     <Compile Include="ActiveRecord\Entity\DatabaseReader\ToList.vb" />
     <Compile Include="ActiveRecord\Entity\DatabaseReader\ToInstance.vb" />
     <Compile Include="ActiveRecord\Entity\InstanceGettersSetters\Getters.vb" />
@@ -89,6 +95,7 @@
     <Compile Include="ActiveRecord\Resources\Columns\ColumnsExcept.vb" />
     <Compile Include="ActiveRecord\Resources\Columns\Columns.vb" />
     <Compile Include="ActiveRecord\Resources\Columns\KeyColumns.vb" />
+    <Compile Include="Attributes\AutoIncrementPrimaryKey.vb" />
     <Compile Include="Attributes\UseEnumUnderlyingValue.vb" />
     <Compile Include="Attributes\Format.vb" />
     <Compile Include="Attributes\AutoIncrement.vb" />
@@ -118,6 +125,20 @@
     <Compile Include="ProviderResource\Manipulations\Insert.vb" />
     <Compile Include="ProviderResource\Manipulations\Delete.vb" />
     <Compile Include="ProviderResource\Manipulations\Update.vb" />
+    <Compile Include="Statement\FetchAll.vb" />
+    <Compile Include="Statement\FetchOne.vb" />
+    <Compile Include="Statement\Prepare.vb" />
+    <Compile Include="Statement\Exec.vb" />
+    <Compile Include="Statement\Reading\ToDictionary.vb" />
+    <Compile Include="Statement\Reading\ToDictionaryTyped.vb" />
+    <Compile Include="Statement\Reading\ToInstanceTyped.vb" />
+    <Compile Include="Statement\Reading\ToInstance.vb" />
+    <Compile Include="Statement\Reading\ToJsonStream.vb" />
+    <Compile Include="Statement\Reading\ToJsonString.vb" />
+    <Compile Include="Statement\Reading\ToJsonStringTyped.vb" />
+    <Compile Include="Statement\Reading\ToJsonStreamTyped.vb" />
+    <Compile Include="Statement\Reading\ToListTyped.vb" />
+    <Compile Include="Statement\Reading\ToList.vb" />
     <Compile Include="Transaction.vb" />
     <Compile Include="Connection\StaticInit.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -170,22 +191,26 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <PropertyGroup>
-    <PostBuildEvent>REM Create a NuGet package for this project and place the .nupkg file in the project's output directory.
-REM If you see this in Visual Studio's Error List window, check the Output window's Build tab for the actual error.
-ECHO Creating NuGet package in Post-Build event...
-PowerShell -NoProfile -ExecutionPolicy Bypass -Command "&amp; '$(ProjectDir)_CreateNewNuGetPackage\DoNotModify\CreateNuGetPackage.ps1' -ProjectFilePath '$(ProjectPath)' -OutputDirectory '$(TargetDir)' -BuildConfiguration '$(ConfigurationName)' -BuildPlatform '$(PlatformName)'"
+    <PostBuildEvent>@if $(ConfigurationName) EQU "Release" (
+  REM Create a NuGet package for this project and place the .nupkg file in the project's output directory.
+  REM If you see this in Visual Studio's Error List window, check the Output window's Build tab for the actual error.
+  ECHO Creating NuGet package in Post-Build event...
+  PowerShell -NoProfile -ExecutionPolicy Bypass -Command "&amp; '$(ProjectDir)_CreateNewNuGetPackage\DoNotModify\CreateNuGetPackage.ps1' -ProjectFilePath '$(ProjectPath)' -OutputDirectory '$(TargetDir)' -BuildConfiguration '$(ConfigurationName)' -BuildPlatform '$(PlatformName)'"
 
-@set wd=%25cd%25
-@cd ../../../Databasic.BuildCommands
-@cscript.exe PostBuild.wsf "%25wd%25"
-@cd %25wd%25
-</PostBuildEvent>
+   @set wd=%25cd%25
+   @cd ../../../Databasic.BuildCommands
+   @cscript.exe PostBuild.wsf "%25wd%25"
+   @cd %25wd%25
+
+)</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>@set wd=%25cd%25
-@cd ../../../Databasic.BuildCommands
-@cscript.exe ./PreBuild.wsf
-@cd %25wd%25</PreBuildEvent>
+    <PreBuildEvent>@if $(ConfigurationName) EQU "Release" (
+   @set wd=%25cd%25
+   @cd ../../../Databasic.BuildCommands
+   @cscript.exe ./PreBuild.wsf
+   @cd %25wd%25
+)</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
