--- a/Databasic.vbproj
+++ b/Databasic.vbproj
@@ -95,7 +95,7 @@
     <Compile Include="ActiveRecord\Resources\Columns\ColumnsExcept.vb" />
     <Compile Include="ActiveRecord\Resources\Columns\Columns.vb" />
     <Compile Include="ActiveRecord\Resources\Columns\KeyColumns.vb" />
-    <Compile Include="Attributes\AutoIncrementPrimaryKey.vb" />
+    <Compile Include="Attributes\IdColumn.vb" />
     <Compile Include="Attributes\UseEnumUnderlyingValue.vb" />
     <Compile Include="Attributes\Format.vb" />
     <Compile Include="Attributes\AutoIncrement.vb" />
@@ -191,21 +191,18 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <PropertyGroup>
-    <PostBuildEvent>@if $(ConfigurationName) EQU "Release" (
+    <PostBuildEvent>@if $(ConfigurationName) EQU Release (
   REM Create a NuGet package for this project and place the .nupkg file in the project's output directory.
   REM If you see this in Visual Studio's Error List window, check the Output window's Build tab for the actual error.
   ECHO Creating NuGet package in Post-Build event...
   PowerShell -NoProfile -ExecutionPolicy Bypass -Command "&amp; '$(ProjectDir)_CreateNewNuGetPackage\DoNotModify\CreateNuGetPackage.ps1' -ProjectFilePath '$(ProjectPath)' -OutputDirectory '$(TargetDir)' -BuildConfiguration '$(ConfigurationName)' -BuildPlatform '$(PlatformName)'"
 
-   @set wd=%25cd%25
    @cd ../../../Databasic.BuildCommands
-   @cscript.exe PostBuild.wsf "%25wd%25"
-   @cd %25wd%25
-
+   @cscript.exe PostBuild.wsf "$(ProjectDir)bin\Release" "$(ProjectName)"
 )</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>@if $(ConfigurationName) EQU "Release" (
+    <PreBuildEvent>@if $(ConfigurationName) EQU Release (
    @set wd=%25cd%25
    @cd ../../../Databasic.BuildCommands
    @cscript.exe ./PreBuild.wsf
